--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,13 @@ $abajo:22.5px;
     color: $color_de_fondo;
 }
 
+//dimenciones del logo
+
+.logo-dimen{
+    width: 50px;
+    height: 50px;
+}
+
 
 
 .fw-semi-bold {
