--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,13 @@ $abajo:22.5px;
     height: 50px;
 }
 
+//Stilo spinner
+
+.spinner-dimen{
+    width: 3em;
+    height: 3em;
+}
+
 
 
 .fw-semi-bold {
